modified the page
added hover effect on the get started call to action button
changed the images and details of the available properties section.

--- a/index.html
+++ b/index.html
@@ -85,60 +85,68 @@
         <div class="available-room">
           <div><img src="./images/room2.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>Bedsitters</h3>
+            <p class="price">ksh 5,500 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              cozy and comfortable bedsitters with a kitchen area and sink
+              suitable for individuals and couples
             </p>
           </div>
         </div>
         <div class="available-room">
-          <div><img src="./images/room1.jpg" alt="singleroom" /></div>
+          <div><img src="./images/image4.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>Studio Apartments</h3>
+            <p class="price">ksh 7,000 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              Stylish and functional apartments featuring an open layout with a
+              combined living, sleeping, and dining area, perfect for
+              individuals or couples seeking a modern living experience
             </p>
           </div>
         </div>
         <div class="available-room">
-          <div><img src="./images/room1.jpg" alt="singleroom" /></div>
+          <div><img src="./images/room3.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>One Bedroom Apartments</h3>
+            <p class="price">ksh 8,500 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              Spacious apartments with a separate bedroom, ideal for individuals
+              or couples looking for additional privacy and space.
             </p>
           </div>
         </div>
         <div class="available-room">
-          <div><img src="./images/room1.jpg" alt="singleroom" /></div>
+          <div><img src="./images/image5.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>Two Bedroom Apartments</h3>
+            <p class="price">ksh 10,000 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              Larger apartments with two separate bedrooms, suitable for small
+              families or roommates.
             </p>
           </div>
         </div>
         <div class="available-room">
-          <div><img src="./images/room1.jpg" alt="singleroom" /></div>
+          <div><img src="./images/image6.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>One Bedroom Self-Contained Apartments</h3>
+            <p class="price">ksh 15,000 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              Apartments with a separate bedroom and private amenities,
+              including a kitchen and bathroom, offering utmost privacy and
+              convenience
             </p>
           </div>
         </div>
         <div class="available-room">
-          <div><img src="./images/room1.jpg" alt="singleroom" /></div>
+          <div><img src="./images/image7.jpg" alt="singleroom" /></div>
           <div class="available-room-details">
-            <h3>Single Room</h3>
-            <p class="price">ksh 3,500 monthly</p>
+            <h3>Two Bedroom Self-Contained Apartments</h3>
+            <p class="price">ksh 20,000 monthly</p>
             <p class="description">
-              cozy and budget friendly rooms suitable for individuals.
+              Apartments with two bedrooms and private amenities, providing
+              ample space and comfort for families or larger households
             </p>
           </div>
         </div>
@@ -158,56 +166,61 @@
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-square-parking"></i></div>
+          <h2>parking</h2>
+          <p>
+            Free parking except for those living in single rooms and bedsitters.
+          </p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-washing-machine"></i></div>
+          <h2>On Site Laundry</h2>
+          <p>On-site laundry @ Kshs.150 per basket.</p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-dumbbell"></i></div>
+          <h2>gym</h2>
+          <p>
+            Free gym except for those living in single rooms and bedsitters.
+          </p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"></div>
+          <i class="fa-solid fa-person-swimming"></i>
+          <h2>Swimming Pool</h2>
+          <p>Free for everyone</p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-elevator"></i></div>
+          <h2>Elevators</h2>
+          <p>Elevators for easy access to upper floors.</p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-water"></i></div>
+          <h2>Water</h2>
+          <p>Free water for everyone.</p>
           <a href="#" class="button">Read More</a>
         </div>
 
         <div class="card-amenities">
-          <div class="icon"><i class="fa-solid fa-wifi"></i></div>
-          <h2>Wifi</h2>
-          <p>Free wifi except for those living in single rooms.</p>
+          <div class="icon"><i class="fa-solid fa-masks-theater"></i></div>
+          <h2>Community Theatre</h2>
+          <p>Free for everyone</p>
           <a href="#" class="button">Read More</a>
         </div>
       </div>
     </section>
-    <sectiom class="contact">
+    <section class="contact">
       <div class="contact-heading">
         <h1>contact us</h1>
         <p>
@@ -249,8 +262,7 @@
         </div>
         <div class="contactForm">
           <form>
-            <h2>send us 
-              message</h2>
+            <h2>send us message</h2>
             <div class="inputbox">
               <input type="text" name="" required />
               <span>Full Name</span>
@@ -269,6 +281,9 @@
           </form>
         </div>
       </div>
-    </sectiom>
+    </section>
+    <footer class="footer">
+      <h3>&copy; Build by Ann. All rights reserved</h3>
+    </footer>
   </body>
 </html>
