stlyed the amenities section h2 made text transform

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
         <div class="card-amenities">
           <div class="icon"><i class="fa-solid fa-square-parking"></i></div>
-          <h2>parking</h2>
+          <h2>Parking</h2>
           <p>
             Free parking except for those living in single rooms and bedsitters.
           </p>
@@ -183,7 +183,7 @@
 
         <div class="card-amenities">
           <div class="icon"><i class="fa-solid fa-dumbbell"></i></div>
-          <h2>gym</h2>
+          <h2>Gym</h2>
           <p>
             Free gym except for those living in single rooms and bedsitters.
           </p>
